@@ -81,7 +81,9 @@
     <Compile Include="System.Windows.Controls\RowDefinitionCollection.cs" />
     <Compile Include="System.Windows.Controls\Slider.cs" />
     <Compile Include="System.Windows.Controls\StackPanel.cs" />
+    <Compile Include="System.Windows.Controls\TabControl trivial things.cs" />
     <Compile Include="System.Windows.Controls\TabControl.cs" />
+    <Compile Include="System.Windows.Controls\TabItem trivial things.cs" />
     <Compile Include="System.Windows.Controls\TabItem.cs" />
     <Compile Include="System.Windows.Controls\WrapPanel.cs" />
     <Compile Include="Theme.cs" />
