@@ -1,5 +1,9 @@
 2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* TabControl trivial things.cs, TabControl.cs, TabItem trivial things.cs, TabItem.cs: Moved the trivial code (CLR properties backing dependency properties, utility methods, etc.) in separate files in an attempt to make TabControl and TabItem easier to work with (the selection handling logic appears to be quite complex).
+	
+2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* TabControl.cs: More work.
 
 2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>
